--- a/package.json
+++ b/package.json
@@ -1,66 +1,81 @@
 {
-  "name": "<Name>",
-  "version": "1.0.0",
-  "private": true,
-  "description": "",
-  "main": "index.js",
+  "name": "bootstrap-solidity",
+  "version": "0..1",
+  "files": [
+    "abi",
+    "deployments",
+    "src",
+    "types",
+    "scripts",
+    "docs"
+  ],
+  "description": "bootstrap solidity project",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:fix": "eslint ./ --ext js,jsx,ts,tsx --fix && pnpm run lint:sol:fix",
+    "lint": "eslint ./ --ext js,jsx,ts,tsx && pnpm run lint:sol",
+    "upgrade:game:mumbai": "source .secrets/hh_mumbai.env &&  pnpm hardhat --network mumbai deploy --tags upgrade_game",
+    "test": "export NODE_ENV=TEST && pnpm hardhat test",
+    "test:parallel": "export NODE_ENV=TEST && pnpm hardhat test --parallel",
+    "build": "pnpm hardhat compile",
+    "lint:sol": "prettier --log-level warn --ignore-path .gitignore '{src,test}/**/*.sol' --check && solhint '{contracts,test}/**/*.sol'",
+    "lint:sol:fix": "prettier --log-level warn --ignore-path .gitignore '{src,test}/**/*.sol' --write",
+    "version": "pnpm build && changeset version",
+    "release": "pnpm build && changeset publish"
   },
   "keywords": [],
   "author": "Tim Pechersky (@Peersky)",
   "license": "MIT",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.1",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/buidler": "^1.4.8",
     "@nomiclabs/buidler-web3": "^1.3.4",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-truffle5": "^2.0.6",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.10",
-    "@openzeppelin/truffle-upgrades": "1.5.0",
-    "@shopify/eslint-plugin": "^40.2.1",
+    "@shopify/eslint-plugin": "^43.0.0",
     "@solidstate/contracts": "^0.0.35",
-    "@typechain/ethers-v5": "^10.0.0",
-    "@typechain/hardhat": "^6.0.0",
+    "@typechain/ethers-v5": "^11.1.2",
+    "@typechain/hardhat": "^7.0.0",
     "@typechain/web3-v1": "^6.0.1",
     "@types/cli-table": "^0.3.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/node-fetch": "^2.6.2",
+    "@typescript-eslint/parser": "^6.7.4",
     "chai": "^4.3.6",
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-config-standard": "^16.0.2",
+    "crypto-js": "^4.1.1",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eth-create2-calculator": "^1.1.5",
     "ethers": "^5.6.6",
     "hardhat": "^2.10.0",
     "hardhat-abi-exporter": "^2.9.0",
     "hardhat-contract-sizer": "^2.6.1",
-    "hardhat-diamond-abi": "^3.0.0",
+    "hardhat-deploy": "^0.12.2",
     "keccak": "^3.0.1",
     "mocha": "^10.0.0",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solidity-coverage": "^0.7.21",
+    "prettier-plugin-solidity": "^1.1.3",
+    "solhint": "^3.6.2",
+    "solidity-coverage": "^0.8.5",
+    "solidity-docgen": "^0.6.0-beta.36",
     "typechain": "^8.0.0",
-    "web3": "^1.7.0"
+    "web3": "^1.8.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.0",
-    "@openzeppelin/contracts-upgradeable": "^4.7.0",
+    "@ethersproject/abi": "^5.7.0",
+    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.36",
+    "chalk": "^4.1.2",
     "cli-table": "^0.3.11",
-    "defender-serverless": "^1.0.3",
-    "hardhat-gas-reporter": "^1.0.8",
-    "ipfs-http-client": "50.1.2",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
-  },
-  "workspaces": [
-    "apps/*",
-    "packages/*",
-    "bots/*"
-  ]
+    "hardhat-gas-reporter": "^1.0.9",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  }
 }
