--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
-  "include": ["./test", "./src", "./scripts"],
-  "files": ["./hardhat.config.ts"]
+  "include": ["./test", "./src", "./scripts", "hardhat.config.js", "./deploy"],
+  "files": ["hardhat.config.ts"]
 }
